<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Button -->
    <string name="app_name">異音解析ツール</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="version_name">1.0</string>
    <string name="rec">録音</string>
    <string name="analysis">解析</string>
    <string name="catalog">カタログ</string>
    <string name="reports">レポート</string>
    <string name="setting">設定</string>
    <string name="catalog_list">リスト方式</string>
    <string name="catalog_select">選択方式</string>
    !-- string for content in TOP screen -->
    <string name="rec_content">テキスト録音</string>
    <string name="analysis_content">テキスト解析</string>
    <string name="report_content">テキストレポート</string>
    <string name="setting_content">テキスト設定</string>
    <string name="calalog_content">テキスト方式</string>
    <!-- string for heading dialog select audios -->
    <string name="recording_date">録音日付</string>
    <string name="serial_number">マシンS/N</string>
    <string name="model_name">機種名</string>
    <string name="job_classification">ジョブ種類</string>
    <string name="paper_type">紙種</string>
    <string name="not_support_device">!対象外の機種のためガイドはありません</string>
    <!-- string for dialog record -->
    <string name="recording">録音中&#8230;</string>
    <string name="stop">異音発生</string>
    <string name="cancel">キャンセル</string>
    <!-- string for dialog setting -->
    <string name="analysis_setting">解析設定</string>
    <string name="fft">FFTサイズ</string>
    <string name="step">ステップ幅</string>
    <string name="time">解析時間（秒）</string>
    <string name="volume">音量調整</string>
    <string name="up">▲</string>
    <string name="down">▼</string>
    <string name="khz">(kHz)</string>
    <string name="seconds">(s)</string>
    <string name="audio_file_name">音声ファイル</string>
    <string name="image_file_name">画像ファイル</string>
    <string name="file_not_exist">音声ファイルが存在していません</string>
    <string name="label_audio_file_name">音声ファイル未選択</string>
    <string name="label_catalog">カタログ画像</string>
    <string name="label_analysis_result">解析結果画像</string>
    <string name="analysing">解析中&#8230;</string>
    <string name="create_report">レポート作成</string>
    <string name="label_comment">コメント</string>
    <string name="notify_upload_title">レポート送信</string>
    <string name="notify_upload_complate">レポート送信成功</string>
    <string name="notify_upload_fail">レポート送信失敗</string>
    <string name="delete_report_alert">レポート削除</string>
    <string name="delete_report_mess">S/N [%1$s]のレポートを削除しますか？</string>
    <string name="first_setting_confirm">Googleアカウントが選択されていません。\n設定画面を開きます</string>
    <!-- string for dialog process method -->
    <string name="title_method_confirm">確認方法詳細</string>
    <string name="title_method_detail">処置確認詳細</string>
    <string name="parts_cause">原因パーツ:</string>
    <string name="method_info">対処方法:</string>
    <string name="method_detail_info">対処方法詳細:</string>
    <string name="parts_result">処置結果</string>
    <string name="parts_result_select">処置結果を選択して下さい</string>
    <string name="msg_report_is_sending">レポートが送信中のため、編集できません</string>
    <string name="txt_not_input">未入力</string>
    <string name="result_fixed">直った</string>
    <string name="result_not_fixed">直らなかった</string>
    <string name="result_non_recurring">異音再現せず</string>
    <string name="result_unknown">不明</string>
    <string name="start_recording">録音開始</string>
    <string name="explain_record">・異音発生が押された前後約４秒間を録音します\n・中止する場合はキャンセルを押します</string>
    <!--string for after recording screen-->
    <string name="record_again">再録音</string>
    <string name="begin_analysis">解析開始</string>
    <string name="explain_after_recording">音声を確認してください\n正しく録音できていればレポート作成\nできていなければ再録音を押してください</string>
    <string name="title_dialog_after_recording">正しく録音できましたか？</string>
    <string name="play">再生</string>
    <!--string for report screen: add new-->
    <string name="finish">完了</string>
    <string name="sendrep">レポート送信</string>
    <string name="search_catalog">カタログ検索</string>
    <string name="loading_catalog">カタログ検索中...</string>
    <string name="ion_type">異音種類</string>
    <string name="ion_category">擬音表現</string>
    <string name="action_portion">原因パーツ</string>
    <string name="action_mode">カラーモード</string>
    <string name="causing">原因</string>
    <string name="show_hint">Show Hint</string>
    <string name="cause_part">処置した原因パーツをすべて選択して下さい</string>
    <string name="method">処置した内容をすべて選択して下さい</string>
    <string name="other">その他</string>
    <string name="message_notify_has_report_miss_input">レポートに未入力項目があります。</string>
    <string name="select_all">すべて選択</string>
    <string name="catalog_not_found">カタログが見つかりません</string>
    <string name="record_again_confirm">再録音確認</string>
    <string name="record_again_message">前回録音の音声と解析画像は削除されます。\n再録音しますか？</string>
    <!--dialog message-->
    <string name="record_confirm_message">次画面で録音を行います。\nお客様の了解は得ていますか？</string>
    <string name="catalog_list_explain">プロダクトごとの\nカタログリストから探す</string>
    <string name="catalog_select_explain">条件を選択して探す</string>
    <string name="catalog_view_type">カタログ表示方式を選択</string>
    <!--string for setting screen-->
    <string name="no_account_google_authenticate">選択したGoogleアカウントがありません</string>
    <string name="no_account_google_login_device_title">端末にGoogleアカウントがありません</string>
    <string name="account_manager_screen_open">アカウント管理画面を開きますか？</string>
    <string name="authenticating">"認証中...."</string>
    <string name="processing">Processing...</string>
    <!-- string for dialog select account google -->
    <string name="select_account_google">Googleアカウントを選択</string>
    <string name="show_past_reports">過去レポートを見る</string>
    <string name="show_local_reports">ローカルレポートを見る</string>
    <string name="account_authentication">アカウント選択</string>
    <!-- Error message-->
    <string name="no_connect_internet">インターネットに接続していません</string>
    <string name="no_data">データがありません</string>
    <string name="authentication_fail">認証失敗</string>
    <string name="network_error">ネットワークエラー</string>
    <string name="get_cookie_fail">クラウドCookieの取得に失敗しました。</string>
    <string name="no_connect_server">サーバに接続しません</string>
    <!-- Google Analytics用-->
    <string name="category_ui_event">UI Event</string>
    <string name="category_key_event">Key Event</string>
    <string name="category_dialog">Dialog</string>
    <string name="category_background">Background event</string>
    <string name="category_analysis">Analysis Event</string>
    <string name="action_button_press">Button press</string>
    <string name="action_get_catalog_list">Get catalog list</string>
    <string name="action_send_report">Send report</string>
    <string name="action_send_report_err">Send report err</string>
    <string name="action_show_dialog">Show dialog</string>
    <string name="action_select_ion_area">Select ion area</string>
    <string name="action_select_record_area">Select record area</string>
    <string name="action_select_authentication">Select authentication</string>
    <string name="label_play">Play</string>
    <string name="label_record_again">Record again</string>
    <string name="label_pause">Pause</string>
    <string name="label_stop">Stop</string>
    <string name="label_volume">Stop</string>
    <string name="label_hint">Hint</string>
    <string name="label_catalog_compare">Catalog compare</string>
    <string name="label_record_again_confirm">Record again confirm</string>
    <string name="label_record_list_dialog">Record list dialog</string>
    <string name="label_hint_dialog">Hint dialog</string>
    <string name="label_filter_dialog">Filter dialog</string>
    <string name="method_image">対処方法画像を表示</string>
    <string name="search_conditions_are_not_input">検索条件がありません</string>
    <string name="message_send_changed_data">過去レポートの変更を送信しますか？</string>
    <string name="search">検索</string>
    <string name="input_atleast_6_characters">You have to input at least 6 characters</string>
    <string name="input_not_empty_allowed">Please input on search box</string>
    <string name="search_sn_report">S/Nでレポートを検索</string>
    <string name="machine_sn">Machine SN</string>
    <string name="process_detail">処置詳細</string>
    <string name="process_confirm">確認詳細</string>
    <string name="process_method_detail">Processing method detail</string>
    <string name="loading_data">Loading data...</string>
    <string name="error">There was an error during process</string>
    <string name="no_sound">カタログのサンプル音声がありません</string>
    <string name="no_image">カタログの解析画像がありません</string>
    <string name="title_result_scan">スキャン結果</string>
    <string name="serial_no">シリアルNo:&#160;</string>
    <string name="product_name">プロダクト名:&#160;</string>
    <string name="re_scan">再スキャン</string>
    <string name="ok">OK</string>
    <string name="description_scan_barcode">操作説明文記載領域</string>
    <string name="description_scan">マシンS/Nと機種名をバーコードから読み込みます</string>
    <string name="infor_recording">録音方法詳細はインフォメーションボタンを押してください</string>
    <string name="infor_operation">操作方法詳細はインフォメーションボタンを押してください</string>
    <string name="infor_compare">説明文</string>

    <integer name="viewfinder_border_width">4</integer>
    <integer name="viewfinder_border_length">60</integer>


    </resources>