<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:paddingTop="50dp"
    android:paddingBottom="50dp">
<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1"
    android:gravity="center_horizontal">
    <Button
        android:id="@+id/catalog_list_btn"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:text="@string/catalog_list" />

    <TextView
        android:id="@+id/catalog_list_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catalog_list_explain" />
</LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal">
    <Button
        android:id="@+id/catalog_select_btn"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:width="200dp"
        android:text="@string/catalog_select"/>

    <TextView
        android:id="@+id/catalog_select_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catalog_select_explain" />
        </LinearLayout>
</LinearLayout>
