<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:background="@drawable/list_item_bg"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="205dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:text="@string/ion_type" />

        <Button
            android:id="@+id/btn_filter_ion_type"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/down" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="205dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:text="@string/ion_category" />

        <Button
            android:id="@+id/btn_filter_ion_category"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/down" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="205dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:text="@string/action_portion" />

        <Button
            android:id="@+id/btn_filter_ion_cause"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/down" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="205dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:text="@string/action_mode" />

        <Button
            android:id="@+id/btn_filter_ion_color"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/down" />
    </RelativeLayout>
</LinearLayout>
