<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout" />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_method_detail"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:onClick="onButtonClick"
                android:text="@string/process_detail" />

            <Button
                android:id="@+id/btn_method_confirm"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:onClick="onButtonClick"
                android:text="@string/process_confirm" />


            <Button
                android:id="@+id/btn_create_report"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:onClick="onButtonClick"
                android:text="@string/create_report" />

            <Button
                android:id="@+id/btn_finish"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:onClick="onButtonClick"
                android:text="@string/finish" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_volume"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:onClick="onClickVolume"
            android:src="@drawable/ic_volume_up_black_48dp" />
    </RelativeLayout>

</RelativeLayout>