<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="24dp" >

    <TextView
        android:id="@+id/title_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:text="@string/recording"
        android:textSize="28sp" />

    <LinearLayout
        android:id="@+id/lntProgressRecording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_recording"
        android:layout_marginBottom="16dp"
        android:orientation="vertical" >
        <ProgressBar 
            android:id="@+id/progressRecording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            />
        <TextView 
            android:id="@+id/txtProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="right"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/txt_explain_recording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_below="@+id/lntProgressRecording"
        android:layout_marginBottom="16dp"
        android:text="@string/explain_record"
        android:textSize="@dimen/font_size_normal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txt_explain_recording"
        android:gravity="right|center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancelRecord"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/cancel"
            android:textColor="#0099CC"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_stopRecord"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/stop"
            android:textColor="#0099CC"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>